Comentario sobre el teorema del collage

--- a/memoria/tex/bibliography.tex
+++ b/memoria/tex/bibliography.tex
@@ -29,6 +29,8 @@
 
 \bibitem{Foroutan} Foroutan-pour, K., Dutilleul, P., Smith, D. (1999). Advances in the implementation of the box-counting method of fractal dimension estimation. \textit{Applied Mathematics and Computation, 105}(2–3), 195–210. \url{https://doi.org/10.1016/s0096-3003(98)10096-6}.
 
+\bibitem{LaTorre} Kunze, H., La Torre, D. (2021). Solving Parameter Identification Problems using the Collage Distance and Entropy. \textit{Recent Developments in Mathematical, Statistical and Computational Sciences. AMMCS 2019. Springer Proceedings in Mathematics and Statistics}, vol 343. Springer, Cham. \url{https://doi.org/10.1007/978-3-030-63591-6_16}
+
 \bibitem{cgdirector} Glawion, A. (2022, 12 abril). \textit{CPU vs. GPU Rendering – What’s the difference and which should you choose?} CG Director. Recuperado 20 de mayo de 2022, de \url{https://www.cgdirector.com/cpu-vs-gpu-rendering/#:%7E:text=GPU%20Based%20Rendering%20And%20GPU%20Focused%20Render%20Engines,-GPU%20rendering%20is&text=For%20one%2C%20GPUs%20are%20much,unlike%20CPUs%20which%20operate%20serially}.
 
 \bibitem{computer-graphics} Hughes, J.F., Van Dam, A., McGuire, M., Sklar, D.F., Foley, J.D., Feiner, S.K., Akeley,K. (2014). \textit{Computer graphics: principles and practice} (3rd ed.). Addison-Wesley.
