--- a/memoria/tex/capitulos/capitulo-3.tex
+++ b/memoria/tex/capitulos/capitulo-3.tex
@@ -332,7 +332,7 @@ Obsérvese cómo efectivamente las imágenes, salvo giro, son prácticamente igu
   \centering
   \begin{tabular}{cc}
     \includegraphics[scale=0.36]{./img/C3/julia-autosimilar-4.png} &   \includegraphics[scale=0.36]{./img/C3/julia-autosimilar-5.png} \\
-  (a) $\mathcal{J}_{0.33-0.41 i}$ en $[-1,-0.3]\times[-1.1,-0.4]$ & (b) $\mathcal{J}_{0.45-0.62 i}$ en $[-0.8,0.2]\times[-0.8,0.2]$ \\[6pt]
+  (a) $\mathcal{J}_{0.33-0.41 i}$ en $[-1,-0.3]\times[-1.1,-0.4]$ & (b) $\mathcal{J}_{0.48-0.13 i}$ en $[-0.6,-0.1]\times[0.25,0.75]$ \\[6pt]
   \includegraphics[scale=0.36]{./img/C3/julia-autosimilar-6.png} &   \includegraphics[scale=0.36]{./img/C3/julia-autosimilar-7.png} \\
   (c) $\mathcal{J}_{0.23+0.51i}$ en $[-1.1,-0.4]\times[0.4,1.1]$ & (d) $\mathcal{J}_{-0.52+0.51 i}$ en $[0,1.5]\times[-1,0.5]$ \\[6pt]
   \end{tabular}
