Primeros cambios en el capítulo 8

--- a/memoria/tex/bibliography.tex
+++ b/memoria/tex/bibliography.tex
@@ -70,7 +70,9 @@
 
 \bibitem{keenan-crane} Crane, K. (2005). Ray Tracing Quaternion Julia Sets on the GPU. \textit{University of Illinois at Urbana-Champaign}
 
-\bibitem{Hubbard-Douady} Douady, A., Hubbard, J. (2009). \textit{Exploring the Mandelbrot set. The Orsay Notes}.
+\bibitem{Hubbard-Douady} Douady, A., Hubbard, J. (2009). \textit{Exploring the Mandelbrot set. The Orsay Notes}. \url{https://pi.math.cornell.edu/~hubbard/OrsayEnglish.pdf}.
+
+Esta última referencia es la traducción a inglés de las notas en francés de un curso dado entre 1983 y 1934, donde se presentan resultados publicados en las referencias [DH1] y Do1 (1982).
 
 \bibitem{normals-sdf} Quilez, I. (s. f.-b). \textit{Normals for an SDF}. Íñigo Quilez. Recuperado 15 de mayo de 2022, de \url{https://iquilezles.org/articles/normalsSDF/}
 
